--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
 			let button = document.getElementById("submitButton");
 			button.addEventListener('click', function (event) {
+				let text = document.querySelector("[name=q]").value;
 				if (text.value === "") {
 					window.alert('must have text')
 					event.preventDefault()
